# algorithm

./: CMakeLists.txt  ReadMe.md  bfs_con_comp.cpp  bfs_shortest_path.cpp  dfs_con_comp.cpp  dp_coin.cpp  dp_longest_path.cpp  gauss_eliminate.cpp  graph.cpp  in_triag.cpp  mst_kruskal.cpp  skel  skel.cpp  sort.cpp  trace_skeleton.h
linked_list/: dll.c  sll.c
